demo complete, readme updated

--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,10 @@ body {background-color: gray;
    
    
   }
+  #userName{
+    font-size: xx-large;
+    background-color: gray;
+  }
   #videoId{
     font-size: xx-large;
     background-color: gray;
